# apollo-simulation-server

./: .gitignore  Apollo Simulation Server (standalone).html  README.md
backend/: .env.example  README.md  pyproject.toml
backend/src/cimasim_api/: __init__.py  config.py  errors.py  main.py  metrics.py  models.py
backend/src/cimasim_api/auth/: __init__.py  claims.py  dependencies.py  verifier.py
backend/src/cimasim_api/custom_netlists/: __init__.py  parser.py
backend/src/cimasim_api/jobs/: __init__.py  custom_readiness.py  errors.py  models.py  readiness.py  routes.py  service.py  store.py
backend/src/cimasim_api/monitoring/: __init__.py  auth.py  models.py  routes.py  service.py
backend/src/cimasim_api/routes/: health.py  identity.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_custom_netlists.py  test_health.py  test_identity.py  test_jobs.py  test_monitoring.py
custom_runner/: Dockerfile  Dockerfile.dockerignore  pyproject.toml
custom_runner/src/cimasim_custom_runner/: __init__.py  dispatcher.py  results.py  runner.py  validation.py
custom_runner/tests/: test_security.py
deploy/backend/: Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.yml  smoke-test.sh
deploy/custom-dispatcher/: README.md  cimasim-custom-dispatcher.service  custom-dispatcher.env.example
deploy/custom-runner-spike/: README.md
deploy/job-spool-test/: README.md  docker-compose.yml  smoke-test.sh
deploy/jobs/: README.md  browser-smoke.md  docker-compose.yml  smoke-test.sh
deploy/monitoring/: README.md  docker-compose.yml
deploy/monitoring/prometheus/: prometheus.yml  rules.yml
deploy/preview/: Dockerfile  Dockerfile.dockerignore  README.md  api-proxy-smoke-test.sh  docker-compose.yml  nginx.conf
deploy/worker/: Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.yml  smoke-test.sh
docs/: api-contract-v1.md  backend-architecture.md  custom-netlist-security.md  custom-netlist-supported-syntax.md  custom-netlist-threat-model.md  custom-runner-architecture.md  frontend-architecture.md  job-lifecycle.md  legacy-rc-migration.md  observability.md  resource-limits.md  threat-model.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/api/: client.ts  errors.ts  healthApi.ts  identityApi.ts  jobTypes.ts  jobsApi.ts  monitoringApi.ts  monitoringTypes.ts  rcParameters.ts  resultsCsv.ts  types.ts  waveform.ts
frontend/src/app/: App.tsx
frontend/src/hooks/: JobsProvider.tsx  jobsContext.ts  useAdminMonitoringAccess.ts  useJobs.ts  useProjects.ts  useResults.ts  useServerStatus.ts  useThemeStore.ts
frontend/src/mocks/: index.ts  jobs.ts  parameters.ts  projects.ts  results.ts  server.ts
frontend/src/pages/: AdminMonitoringPage.tsx  HomePage.tsx  JobDetailPage.tsx  JobsPage.tsx  ModelsPage.tsx  NewSimulationPage.tsx  NotFoundPage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  ResourcesPage.tsx  ResultDetailPage.tsx  ResultsIndexPage.tsx  SettingsPage.tsx
monitoring/spool_exporter/: Dockerfile  Dockerfile.dockerignore  pyproject.toml
monitoring/spool_exporter/src/cimasim_spool_exporter/: __init__.py  collector.py  main.py
monitoring/spool_exporter/tests/: test_collector.py
worker/: README.md  pyproject.toml
worker/src/cimasim_worker/: __init__.py  daemon.py  executor.py  healthcheck.py  job_models.py  main.py  rc_parameters.py  spool.py  validation.py
worker/src/cimasim_worker/templates/: rc_lowpass_fixed.cir  rc_lowpass_param.cir
worker/tests/: test_executor.py  test_healthcheck.py  test_spool_daemon.py
(+104 files in other folders)
