[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cimasim-api"
version = "0.1.0"
description = "Phase 1 CimaSim FastAPI backend authentication and health API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "email-validator>=2.2.0",
  "fastapi>=0.116.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pyjwt[crypto]>=2.9.0",
  "prometheus-client==0.25.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.1",
  "coverage[toml]>=7.6.0",
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cimasim_api"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = [
  "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105", "S106", "S107", "S311"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["cimasim_api"]

[tool.coverage.report]
show_missing = true
fail_under = 90
