[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cimasim-custom-runner"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["mypy>=1.11.0", "pytest>=8.3.0", "ruff>=0.6.0"]

[project.scripts]
cimasim-custom-dispatcher = "cimasim_custom_runner.dispatcher:main"
cimasim-custom-runner = "cimasim_custom_runner.runner:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cimasim_custom_runner"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
