[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cimasim-spool-exporter"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["prometheus-client==0.25.0", "pydantic>=2.8.0"]

[project.optional-dependencies]
dev = ["mypy>=1.11.0", "pytest>=8.3.0", "ruff>=0.6.0"]

[project.scripts]
cimasim-spool-exporter = "cimasim_spool_exporter.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cimasim_spool_exporter"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
